tests/diagnostics/user_vec_type.kal
# Vec is a built-in type and cannot be redefined.
struct Vec { x: i64 }
